# summary-care-record-api

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  ecs-proxies-containers.yml  ecs-proxies-deploy-prod.yml  ecs-proxies-deploy-sandbox.yml  ecs-proxies-deploy.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  scr-proxies-containers.yml  scr-proxies-deploy-sandbox.yml  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: build.yaml  continuous-integration.yml  pr-lint.yaml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline-main.yml  azure-release-pipeline-master.yml  azure-release-pipeline.yml  project.yml
azure/components/: run-smoke-tests.yml
azure/templates/: postman-tests.yml  run-e2e-tests.yml  run-tests-int.yml  run-tests-prod.yml  run-tests.yml
collection/: instructions.md  postman_environment.json
docker/: .gitattributes  .gitignore  README.md  docker-compose.yml  restart-mock.sh  restart-service.sh  setup-mock.sh  start-local-environment.sh
docker/docker/: Dockerfile  build-image.sh
docker/docker/mock/: Dockerfile  build-mock-image.sh
docker/docker/service/: Dockerfile  build-service-image.sh
docker/docker/spine-mock/: Dockerfile
docker/hello-world-sandbox/: Dockerfile  Makefile  package-lock.json  package.json
docker/hello-world-sandbox/src/: app.js  config.json
docker/mock-spine-service/: Dockerfile  build.gradle  settings.gradle
docker/rest-client/: fhir.json.http  fhir.xml.http
docker/sandbox/: Dockerfile  build.gradle
docker/sds-api/: README.md
docker/service/: Dockerfile  build-service-image.sh  build.gradle  lombok.config  settings.gradle  sonar-project.properties
products/: all.yml  ref.yml
proxies/live/: Makefile
proxies/live/apiproxy/: hello-world-v1.xml  scr.xml
proxies/sandbox/apiproxy/: scr.xml
sandbox/: README.md  package.json
sandbox/api/: openapi.yaml
sandbox/stubs/mappings/: fhir-fhir-json.json  fhir-fhir-xml.json  healthcheck.json
scripts/: apigee_products_set.py  build_proxy.sh  calculate_version.py  deploy_spec.sh  populate_ssm_parameters.sh  tag-versions.sh
specification/: hello-world.yaml  summary-care-record.yaml
specification/components/examples/: AuditEvent.json  DocumentReferenceBundle.json  GetScrBundle.json  Greeting.json  PatientEntry.json  ScrUploadBundle.json  SetPermission.json  UploadScrBundle.json
terraform/: main.tf
tests/: api_tests.py  audit_event.json  conftest.py
tests/configuration/: config.py
tests/non_prod/: api_tests.py  conftest.py  create_token_int.py  test_app_restricted.py
tests/prod/: api_tests.py
tests/prod/configuration/: config.py
tests/sandbox_test_data/: audit_event.json  set_permission.json
tests/smoke/: api_tests.py  conftest.py
tests/test_data/: audit_event.json  post_bundle.json  set_permission.json
tools/app-restricted-testing/: test_app_restricted.py
(+837 files in other folders)
