[project]
python = "^3.8"


[tool.poetry]
name = "summary-care-record-api"
version = "0.0.1-alpha"
description = "TODO"

license = "MIT"

authors = [
    #TODO add authors
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/summary-care-record-api"
homepage = ""

keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.10.2"
gitpython = "^3.1.30"
requests = "^2.24.0"
locust = "^1.2"
pytest-bdd = "^4.0.1"
cryptography = "^36.0.1"
python-dateutil = "^2.8.1"
pytest-rerunfailures = "^9.1.1"
polling2 = "^0.4.7"
pytest-nhsd-apim = "^3.3.6"


[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^20.8b1"
jinja2 = "^2.11.2"
pytest = "^6.1.2"
pytest_check = "^1.0.1"
pyjwt = "^2.0.1"
pytest-rerunfailures = "9.1.1"
pip-licenses = "^3.5.3"


[tool.poetry.scripts]
