[project]
python = "^3.8"


[tool.poetry]
name = "summary-care-record-api"
version = "0.0.1-alpha"
description = "TODO"

license = "MIT"

authors = [
    #TODO add authors
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/summary-care-record-api"

keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
certifi = ">=2024.7.4"
cryptography = "^43.0.1"
docopt = "^0.6.2"
flask = "^2.2.5"
gitpython = "^3.1.34"
jsonpath-rw = "^1.4.0"
locust = "^1.2"
polling2 = "^0.4.7"
pytest-bdd = "^4.0.1"
pytest-rerunfailures = "^9.1.1"
python = "^3.8"
python-dateutil = "^2.8.1"
pyyaml = "^6.0.2"
requests = "^2.32.3"
semver = "^2.10.2"
werkzeug = "3.0.3"


[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^24.3.0"
jinja2 = "^3.1.4"
pytest = "^7.2.0"
pytest_check = "^1.0.1"
pyjwt = "^2.0.1"
pytest-rerunfailures = "9.1.1"
pip-licenses = "^3.5.3"


[tool.poetry.scripts]
