[project]
python = "^3.13"
name = "summary-care-record-api"
version = "3.0.5-alpha"
description = "NHS Hosted adaptor to convert HL7 based patient Summary Care Records into JSON FHIR, and vice-versa."
readme = 'README.md'
license = "MIT"
authors = []
keywords = ["healthcare", "uk", "nhs"]

[project.urls]
"repository" = "https://github.com/NHSDigital/summary-care-record-api"


[tool.poetry.dependencies]
certifi = ">=2024.7.4"
cryptography = "^43.0.1"
docopt = "^0.6.2"
flask = "^2.2.5"
gitpython = "^3.1.34"
jsonpath-rw = "^1.4.0"
locust = "^1.2"
polling2 = "^0.4.7"
pytest-bdd = "^4.0.1"
pytest-rerunfailures = "^9.1.1"
python = "^3.13"
python-dateutil = "^2.8.1"
pyyaml = "^6.0"
requests = "^2.32.3"
semver = "^2.10.2"
werkzeug = "3.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^24.3.0"
jinja2 = "^3.1.4"
pytest = "^7.2.0"
pytest_check = "^1.0.1"
pyjwt = "^2.0.1"
pytest-rerunfailures = "9.1.1"
pip-licenses = "^3.5.3"

[tool.poetry.scripts]
